samples/_failures_safe/1761326587_bf9101_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f562354e.c: In function ‘main’:
./samples/SAFE/__tmp_f562354e.c:142:5: error: expected expression at end of input
  142 |     if (input_len ==
      |     ^~
./samples/SAFE/__tmp_f562354e.c:142:5: error: expected declaration or statement at end of input
